assets/global.css
/* MVP.css v1.1 - https://github.com/andybrewer/mvp */

:root {
  --border-radius: 5px;
  --box-shadow: 2px 2px 10px;
  --code-fs: 1rem;
  --color: #f97316;
  --color-accent: #ff3e000b;
  --color-bg: #fff;
  --color-bg-secondary: #e9e9e9;
  --color-secondary: hsl(204, 100%, 38%);
  --color-secondary-accent: #40b3ff0b;
  --color-shadow: #f4f4f4;
  --color-text: #444;
  --color-text-secondary: #999;
  --color-green: #6ecb44;
  --color-yellow: #ffba29;
  --color-red: #f15856;
  --font-mono: FiraCode, monospace;
  --hover-brightness: 1.2;
  --justify-important: center;
  --justify-normal: left;
  --line-height: 170%;
  --width-card: 370px;
  --width-card-medium: 460px;
  --width-card-wide: 800px;
  --width-content: 1166px;
  --svelte-grey: #4a4a55;
  --svelte-grey-light: #d1d1d1;

  --m18: 1.125rem;
  --m15: 0.9375rem;
  --m10: 0.625rem;
  --m5: 0.3125rem;
  --m1: 0.0625rem;
}

/*
  @media (prefers-color-scheme: dark) {
	  :root {
			  --color: #0097fc;
			  --color-accent: #0097fc4f;
			  --color-bg: #333;
			  --color-bg-secondary: #555;
			  --color-secondary: #e20de9;
			  --color-secondary-accent: #e20de94f;
			  --color-shadow: #bbbbbb20;
			  --color-text: #f7f7f7;
			  --color-text-secondary: #aaa;
	  }
  }
  */

/* Layout */
article aside {
  background: var(--color-secondary-accent);
  border-left: 4px solid var(--color-secondary);
  padding: 0.01rem 0.8rem;
}

html,
body {
  min-height: 100vh;
}


body {
  background: var(--color-bg);
  color: var(--color-text);
  font-family: Inter;
  font-style: normal;
  font-weight: normal;
  font-size: 18px;
  line-height: var(--line-height);
  margin: 0;
  overflow-x: hidden;
  padding: 0;
  border-top: 6px solid var(--color);
}

footer,
header,
main {
  margin: 0 auto;
  max-width: var(--width-content);
  padding: 2rem 1rem;
}

hr {
  background-color: var(--color-bg-secondary);
  border: none;
  height: 1px;
  margin: 4rem 0;
}

section {
  display: flex;
  flex-wrap: wrap;
  justify-content: var(--justify-important);
}

section aside {
  border: 1px solid var(--color-bg-secondary);
  border-radius: var(--border-radius);
  box-shadow: var(--box-shadow) var(--color-shadow);
  margin: 1rem;
  padding: 1.25rem;
  width: var(--width-card);
}

section aside:hover {
  box-shadow: var(--box-shadow) var(--color-bg-secondary);
}

/* Headers */
article header,
div header,
main header {
  padding-top: 0;
}

header {
  text-align: var(--justify-important);
}

header a b,
header a em,
header a i,
header a strong {
  margin-left: 1rem;
  margin-right: 1rem;
}

header nav img {
  margin: 1rem 0;
}

section header {
  padding-top: 0;
  width: 100%;
}

/* Nav */
nav {
  display: flex;
  align-items: center;
  font-weight: bold;
  justify-content: space-between;
  margin-bottom: 7rem;
}

nav ul {
  list-style: none;
  padding: 0;
}

nav ul li {
  display: inline-block;
  margin: 0 0.5rem;
}

/* Typography */
samp {
  background-color: var(--color-accent);
  border-radius: var(--border-radius);
  color: var(--color-text);
  display: inline-block;
  margin: 0 0.1rem;
  padding: 0rem 0.5rem;
  text-align: var(--justify-normal);
}

details {
  margin: 1.3rem 0;
}

details summary {
  font-weight: bold;
}

details summary:focus {
  outline: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  font-family: Overpass;
  font-style: normal;
  font-weight: bold;
  font-size: 29px;
  line-height: var(--line-height);
}

mark {
  padding: 0.1rem;
}

ol li,
ul li {
  padding: 0.2rem 0;
}

p {
  margin: 0.75rem 0;
  padding: 0;
}

pre samp {
  display: block;
  margin: 1rem 0;
  max-width: var(--width-card-wide);
  padding: 1rem;
}

small {
  color: var(--color-text-secondary);
}

sup {
  background-color: var(--color-secondary);
  border-radius: var(--border-radius);
  color: var(--color-bg);
  font-size: xx-small;
  font-weight: bold;
  margin: 0.2rem;
  padding: 0.2rem 0.3rem;
  position: relative;
  top: -2px;
}

/* Links */
a {
  color: var(--color-secondary);
  font-weight: bold;
  text-decoration: none;
}

a:hover {
  filter: brightness(var(--hover-brightness));
  text-decoration: underline;
}

a b,
a em,
a i,
a strong,
button {
  border-radius: var(--border-radius);
  display: inline-block;
  font-size: medium;
  font-weight: bold;
  margin: 1.5rem 0 0.5rem 0;
  padding: 1rem 2rem;
}

button:hover {
  cursor: pointer;
  filter: brightness(var(--hover-brightness));
}

a b,
a strong,
button {
  background-color: var(--color-secondary);
  border: 2px solid var(--color-secondary);
  color: var(--color-bg);
}

a em,
a i {
  border: 2px solid var(--color-secondary);
  border-radius: var(--border-radius);
  color: var(--color);
  display: inline-block;
  padding: 1rem 2rem;
}

/* Images */
figure {
  margin: 0;
  padding: 0;
}

img {
  max-width: 100%;
}

figure figcaption {
  color: var(--color-text-secondary);
}

/* Forms */
form {
  border: 1px solid var(--color-bg-secondary);
  border-radius: var(--border-radius);
  box-shadow: var(--box-shadow) var(--color-shadow);
  display: block;
  max-width: var(--width-card-wide);
  min-width: var(--width-card);
  padding: 1.5rem;
  text-align: var(--justify-normal);
}

form header {
  margin: 1.5rem 0;
  padding: 1.5rem 0;
}

input,
label,
select,
textarea {
  display: block;
  font-size: inherit;
  max-width: var(--width-card-wide);
}

input,
select,
textarea {
  border: 1px solid var(--color-bg-secondary);
  border-radius: var(--border-radius);
  margin-bottom: 1rem;
  padding: 0.4rem 0.8rem;
}

label {
  font-weight: bold;
  margin-bottom: 0.2rem;
}

button:focus,
input:focus,
select:focus,
textarea:focus {
  outline: none;
}

/* Tables */
table {
  border: 1px solid var(--color-bg-secondary);
  border-radius: var(--border-radius);
  border-spacing: 0;
  overflow-x: scroll;
  overflow-y: hidden;
  padding: 0;
}

table td,
table th,
table tr {
  padding: 0.4rem 0.8rem;
  text-align: var(--justify-important);
}

table thead {
  background-color: var(--color);
  border-collapse: collapse;
  border-radius: var(--border-radius);
  color: var(--color-bg);
  margin: 0;
  padding: 0;
}

table thead th:first-child {
  border-top-left-radius: var(--border-radius);
}

table thead th:last-child {
  border-top-right-radius: var(--border-radius);
}

table thead th:first-child,
table tr td:first-child {
  text-align: var(--justify-normal);
}

/* Quotes */
blockquote {
  display: block;
  font-size: x-large;
  line-height: var(--line-height);
  margin: 1rem auto;
  max-width: var(--width-card-medium);
  padding: 1.5rem 1rem;
  text-align: var(--justify-important);
}

blockquote footer {
  color: var(--color-text-secondary);
  display: block;
  font-size: small;
  line-height: var(--line-height);
  padding: 1.5rem 0;
}

/* Code */
code {
  font-family: var(--font-mono);
}

/* Custom styles */
@font-face {
  font-family: Inter;
  src: url(fonts/Inter-Regular.woff2);
}
@font-face {
  font-family: Overpass;
  src: url(fonts/Overpass-SemiBold.woff2);
  font-weight: 600;
}
@font-face {
  font-family: Overpass;
  src: url(fonts/Overpass-Bold.woff2);
  font-weight: bold;
}

@font-face {
  font-family: FiraCode;
  src: url(fonts/FiraCode-Regular.ttf);
}

.my-1 {
  margin: 1rem 0;
}
.mx-1 {
  margin: 0 1rem;
}
.d-flex {
  display: flex;
}

@media print {
  body {
    border-top: none;
  }
}

